# ha-eloverblik-plus

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  release.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/: configuration.yaml
custom_components/eloverblik_custom/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/eloverblik_custom/frontend/: eloverblik-hourly-card.js
custom_components/eloverblik_custom/translations/: en.json
custom_components/eloverblik_plus/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  frontend.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/eloverblik_plus/frontend/: eloverblik-hourly-card.js
custom_components/eloverblik_plus/translations/: da.json
tests/: conftest.py  test_api.py  test_api_http.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_frontend.py  test_init.py  test_sensor.py
